<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="#b8d6d6"
    android:padding="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:gravity="center"
        android:padding="10dp"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="#00d0ff"
        android:text="@string/sua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="20dp"
        android:id="@+id/edtTenCV_edit"
        android:hint="@string/ten_cong_viec"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtNoiDungCV_edit"
        android:hint="@string/noi_dung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:id="@+id/edtDiaDiemCV_edit"
        android:hint="@string/dia_diem"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtNgayCV_edit"
            android:hint="@string/ngay"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/imgNgay"
            android:scaleType="center"
            android:src="@drawable/date"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edtGioCV_edit"
            android:hint="@string/gio"
            android:layout_weight="8"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <ImageView
            android:id="@+id/imgGio"
            android:scaleType="center"
            android:src="@drawable/time"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>

    <LinearLayout
        android:paddingTop="20dp"
        android:weightSum="10"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:background="@drawable/custom_button_press"
            android:id="@+id/btnSua"
            android:layout_weight="5"
            android:text="@string/sua"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <Button
            android:layout_marginLeft="5dp"
            android:background="@drawable/custom_button_press"
            android:id="@+id/btnTroLai"
            android:layout_weight="5"
            android:text="@string/tro_lai"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </LinearLayout>
</LinearLayout>