<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9acef1"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:background="@drawable/custom_bg"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/doi_mat_khau"
            android:textColor="#0070b5"
            android:textSize="26sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:text="@string/mat_khau_moi"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtPassNew"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_edt"
            android:inputType="textPassword"
            android:maxLength="32" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:text="@string/nhap_lai_mat_khau_moi"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtPassNewConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_edt"
            android:inputType="textPassword"
            android:maxLength="32" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:text="@string/mat_khau_cu"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edtPassOld"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:background="@drawable/custom_edt"
            android:maxLength="64" />


        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_button_press"
            android:text="@string/xac_nhan"
            android:textAppearance="@style/TextAppearance.AppCompat" />


        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/custom_button_press"
            android:text="@string/tro_lai"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </LinearLayout>

</ScrollView>