<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="#b2d9f4"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:textSize="28sp"
            android:textColor="#1828fd"
            android:gravity="center"
            android:text="Thêm công việc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_marginTop="10dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:gravity="center"
                android:textColor="#000"
                android:textStyle="bold"
                android:text="@string/muc_uu_tien"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <Spinner
                android:layout_marginLeft="10dp"
                android:id="@+id/spUuTien"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"></Spinner>
        </LinearLayout>

        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/ten_cong_viec"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"/>
            <EditText
                android:background="@drawable/custom_edt"
                android:id="@+id/edtTenCV_add"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/noi_dung"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical" />
            <EditText
                android:background="@drawable/custom_edt"
                android:id="@+id/edtNoiDungCV_add"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/dia_diem"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"/>
            <EditText
                android:background="@drawable/custom_edt"
                android:id="@+id/edtDiaDiemCV_add"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/ngay"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"/>
            <EditText
                android:background="@drawable/custom_edt"
                android:id="@+id/edtNgayCV_add"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>

            <Button
                android:id="@+id/btnChonNgay_add"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@drawable/custom_button_press"
                android:text="@string/chon_ngay" />
        </LinearLayout>
        <LinearLayout
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:weightSum="3"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_height="wrap_content">
            <TextView
                android:textStyle="bold"
                android:textColor="#000"
                android:text="@string/gio"
                android:layout_weight="0.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center_vertical"/>
            <EditText
                android:background="@drawable/custom_edt"
                android:id="@+id/edtGioCV_add"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent"/>
            <Button
                android:id="@+id/btnChonGio_add"
                android:layout_marginLeft="10dp"
                android:background="@drawable/custom_button_press"
                android:text="@string/chon_gio"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </LinearLayout>

        <Button
            android:id="@+id/btnThem"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/custom_button_press"
            android:text="@string/them_cong_viec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>
</ScrollView>