<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#9acef1"
    tools:context=".MainActivity">

    <LinearLayout
        android:background="@drawable/custom_bg"
        android:layout_marginTop="50dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="26sp"
            android:textColor="#0070b5"
            android:text="@string/dang_nhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="40dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/ten_dang_nhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_edt"
            android:id="@+id/edtID"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginTop="15dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:textColor="#000"
            android:textSize="16sp"
            android:text="@string/mat_khau"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/edtPASS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/custom_edt"
            android:inputType="textPassword" />
        <CheckBox
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:id="@+id/cbRemember"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nho_mat_khau"
            />

        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="15dp"
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/dang_nhap"
            android:background="@drawable/custom_button_press"
            android:textAppearance="@style/TextAppearance.AppCompat" />
        <Button
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/custom_button_press"
            android:text="@string/dang_ky"
            android:textAppearance="@style/TextAppearance.AppCompat" />
    </LinearLayout>

</ScrollView>